Fix text overflow in to do boxes

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 form {
     display:flex;
     flex-direction:column;
-    width:500px; /* Use flexbox measurement here? */
+    width:500px; 
 }
 
 form:first-child {
@@ -24,6 +24,9 @@ form:first-child {
     margin: 35px 30px 20px 0;
     width:300px;
     height:300px;
+
+    overflow:hidden;
+    text-overflow:ellipsis;
 }
 
 .todo:hover{
@@ -35,15 +38,10 @@ form:first-child {
     display:flex;
 }
 
-/*Text overflows at the bottom if too long- needs to be clipped off*/
 .todo-description {
     word-wrap: break-word;
-    /* overflow:hidden;
-    text-overflow:ellipsis; */
-
 }
 
-/*todo-header > button */
 .close-button {
     margin-left:auto;
     align-self:flex-start;
